[package]
name = "statagg"
version = "0.1.0"
authors = ["Colin Adler <colin@coder.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.1"
prost = "0.6"
tokio = { version = "0.2", features = ["full"] }
futures-util = { version = "0.3", default-features = false, features = ["async-await", "sink", "std"] }
futures-channel = "0.3"
tungstenite = "0.10"
tokio-tungstenite = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
tonic-build = "0.1.0"
